Examples page fixes and enhances - fixed examples page layout issues - added CpCode component for creating copyable code lines

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -25,6 +25,10 @@ iframe {
     height: 500px;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 body {
   font-size: 1.2rem;
   color: #dadada !important;
